Rabbit MQ config and basic code added

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.data.mongodb.database=smartorder
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# RabbitMQ Config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Queue/Exchange/Key names (you can tweak later)
+rabbitmq.exchange=order.exchange
+rabbitmq.routing.key=order.created
+rabbitmq.queue=order.queue
