Rabbit MQ and Kafka are working on both applications , prev code has some sync issues

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 spring.application.name=order-service
 
-# MongoDB connection config
+# MongoDB connection
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=smartorder
 
-# Kafka configuration
+# Kafka
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-# RabbitMQ Config
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-# Queue/Exchange/Key names (you can tweak later)
+# RabbitMQ Queues/Exchange
 rabbitmq.exchange=order.exchange
-rabbitmq.routing.key=order.created
 rabbitmq.queue=order.queue
+rabbitmq.routingKey=order.created
